<resources>
    <string name="app_name">ClickNChow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_email">Email Address</string>
    <string name="ed_email">Type your email address</string>
    <string name="tv_password">Password</string>
    <string name="ed_password">Type your password</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_register">Create New Account</string>
    <string name="tv_name">Full Name</string>
    <string name="ed_name">Type your full name</string>
    <string name="btn_continue">Continue</string>
    <string name="tv_phone_number">Phone No.</string>
    <string name="ed_phone_number">Type your phone number</string>
    <string name="tv_address">Address</string>
    <string name="ed_address">Type your address</string>
    <string name="tv_house_number">House No.</string>
    <string name="ed_house_number">Type your house number</string>
    <string name="tv_city">City</string>
    <string name="ed_city">Select your city</string>
    <string name="btn_register_now">Sign Up Now</string>
    <string name="subtitle_success">Now you are able to order\nsome foods as a self-reward</string>
    <string name="title_success">Yeay! Completed</string>
    <string name="find_foods">Find Foods</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_order">Order</string>
    <string name="title_profile">Profile</string>
    <string name="title_greeting">Greetings User</string>
    <string name="subtitle_home">Let\'s get some foods</string>
    <string name="food_name">Food Name</string>
    <string name="tv_food_price">Rp. 28.000</string>
    <string name="subtitle_order">Seems like you have not\nordered any food yet</string>
    <string name="tv_ouch_hungry">Ouch! Hungry</string>
    <string name="user_gmail">User Gmail</string>
    <string name="username">Username</string>
    <string name="menu_profile">Menu Profile</string>
    <string name="detail_description">Makanan khas Bandung yang cukup sering dipesan\noleh anak muda dengan pola makan yang cukup tinggi\ndengan mengutamakan diet yang sehat dan teratur.</string>
    <string name="tv_ingredients_title">Ingredients:</string>
    <string name="ingredients">bawang, cabe, wortel</string>
    <string name="tv_total_price_title">Total Price:</string>
    <string name="total_price">IDR 29.000</string>
    <string name="order_now">Order Now</string>
    <string name="item_ordered">Item Ordered</string>
    <string name="_14_items">14 items</string>
    <string name="details_transaction">Details Transaction</string>
    <string name="driver">Driver</string>
    <string name="tax">Tax 10%</string>
    <string name="user_phone_number">0822 0819 9688</string>
    <string name="user_address">Setra Duta Palima</string>
    <string name="user_house_number">A5 Hook</string>
    <string name="user_city">Jakarta</string>
    <string name="name">Name</string>
    <string name="checkout_now">Checkout Now</string>
    <string name="title_success_order">You\'ve Made Order</string>
    <string name="subtitle_success_order">Just stay at home while we are\npreparing your best foods</string>
    <string name="order_other_foods">Order Other Foods</string>
    <string name="view_my_order">View My Order</string>
    <string name="dummy_email">rusdi12322@hotbarber.com</string>
    <string name="dummy_password">12345678</string>
    <string name="hi">Hi, %1$s</string>
</resources>