<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layout_marginTop="24dp"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    android:paddingTop="26dp"
    android:orientation="vertical"
    tools:context=".ui.auth.signin.SignInFragment">

    <TextView
        android:id="@+id/tv_phone_number"
        style="@style/TextView.PoppinsNormal16sp020202"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_phone_number"/>

    <EditText
        android:id="@+id/ed_phone_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="6dp"
        android:inputType="phone"
        android:background="@drawable/shape_rectangle_outline_8_020202"
        style="@style/EditText.PoppinsNormal14sp8D92A3"
        android:hint="@string/ed_phone_number"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/tv_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        style="@style/TextView.PoppinsNormal16sp020202"
        android:text="@string/tv_address"/>

    <EditText
        android:id="@+id/ed_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="6dp"
        android:inputType="text"
        android:background="@drawable/shape_rectangle_outline_8_020202"
        style="@style/EditText.PoppinsNormal14sp8D92A3"
        android:hint="@string/ed_address"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/tv_house_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        style="@style/TextView.PoppinsNormal16sp020202"
        android:text="@string/tv_house_number"/>

    <EditText
        android:id="@+id/ed_house_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="6dp"
        android:inputType="text"
        android:background="@drawable/shape_rectangle_outline_8_020202"
        style="@style/EditText.PoppinsNormal14sp8D92A3"
        android:hint="@string/ed_house_number"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/tv_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        style="@style/TextView.PoppinsNormal16sp020202"
        android:text="@string/tv_city"/>

    <EditText
        android:id="@+id/ed_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="6dp"
        android:inputType="textPassword"
        android:background="@drawable/shape_rectangle_outline_8_020202"
        style="@style/EditText.PoppinsNormal14sp8D92A3"
        android:hint="@string/ed_city"
        tools:ignore="Autofill" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_register_now"
        android:layout_marginTop="24dp"
        style="@style/Button.Primary"/>
</LinearLayout>