<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.order.OrderFragment">

    <include
        android:id="@+id/include_toolbar"
        layout="@layout/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/Base.Theme.ClickNChow.AppBarOverlay"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/include_toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            style="@style/Base.Theme.ClickNChow.AppBarOverlay">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:tabIndicatorFullWidth="false"
                app:tabMode="scrollable"
                app:tabSelectedTextColor="@color/black"
                app:tabIndicatorColor="@color/black"
                app:tabTextAppearance="@style/Tab"/>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_empty_order"
            android:layout_width="200dp"
            android:layout_height="201dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_empty_order"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_ouch_hungry"
            style="@style/TextView.PoppinsNormal20sp020202"
            android:layout_marginTop="30dp"/>

        <TextView
            android:id="@+id/tv_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtitle_order"
            style="@style/TextView.PoppinsNormal14sp8D92A3"
            android:gravity="center"
            android:layout_marginTop="6dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_find_food"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/find_foods"
            android:textAllCaps="false"
            android:layout_marginTop="30dp"
            style="@style/Button.Primary"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>